dada_tests/parser/param_class/ref.ref
Error: expected type after `:`
    ╭─[dada_tests/parser/param_class.dada:13:5]
    │
 12 │     field1:
    ·           ┬  
    ·           ╰── `:` is here
 13 │     field2  #! ERROR expected type after `:`
    ·     ───┬──  
    ·        ╰──── here
────╯
